2016-09-16  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* Allow changing passphrase binding after granting

2016-09-10  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* Implement sign-git-tag

2016-09-07  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* configure.ac: Release 0.103.
	* NEWS: Update.

	* Lots of new features, as listed in NEWS.

2015-11-26  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.102.
	* NEWS: Update.

	* src/bridge.py (SignRPMsReadReplyThread._real_run): On exceptions,
	shut down the server socket to cause *RequestThread to terminate even
	if the server is blocking and waiting for this thread to continue reading
	its replies.

	* src/utils.py (run_worker_threads): Do not log exceptions after
	waiting on a thread, the thread has logged it already at termination
	time.

	* src/utils.py (log_exception): New parameter thread_name.  All users
	changed.

	* src/utils.py (WorkerQueueOrphanedError, WorkerQueue): New classes.
	(WorkerThread.run): Mark input queues as orphaned. Be fairly silent
	about failures sending EOF to orphaned queues.
	(run_worker_threads): Silently ignore failures sending EOF to orphaned
	queues.
	(log_exception): Recognize WorkerQueueOrphanedError.
	* src/bridge.py (SignRPMsRequestHandler.post_request_phase)
	* src/server.py (cmd_sign_rpms): Use utils.WorkerQueue.

2015-11-18  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.101.
	* NEWS: Update.

	* src/bridge.py (SignRPMsReadRequestThread.eof): Remove.
	(SignRPMsReadRequestThread.__init__)
	(SignRPMsKojiRequestThread.__init__)
	(SignRPMsKojiRequestThread._real_run): Use None instead of
	SignRPMsReadRequestThread.eof as the end-of-stream marker.
	(SignRPMsReadReplyThread.eof): Remove.
	(SignRPMsReadReplyThread.__init__)
	(SignRPMsKojiReplyThread.__init__)
	(SignRPMsKojiReplyThread._real_run): Use None instead of
	SignRPMsReadReplyThread.eof as the end-of-stream marker.

	* src/bridge.py (SignRPMsKojiRequestThread)